adding automatic test files

--- a/professional_tasks/pytest.ini
+++ b/professional_tasks/pytest.ini
@@ -5,3 +5,4 @@ markers =
     task3: mark a test for task3
     task4: mark a test for task4
     task5: mark a test for task5
+    solution: marks tests that use a specific solution file
