final expansion of tasks

--- a/professional_tasks/pytest.ini
+++ b/professional_tasks/pytest.ini
@@ -5,4 +5,6 @@ markers =
     task3: mark a test for task3
     task4: mark a test for task4
     task5: mark a test for task5
+    task6: mark a test for task6
+    task7: mark a test for task7
     solution: marks tests that use a specific solution file
